Compile the application using babel
https://github.com/azaharakis/ui-training/tree/master/src/2.%20Build%20Tools/1.%20Babel

We have gone with the env, and stage-2 presets

env allows you to compile to the browsers you choose to support, meaning
that it will not pollyfill any implementation that is natively supported
in the latest chrome browser, in this case as I didn't specify any
options.

stage-2 is another preset
https://babeljs.io/docs/plugins/preset-stage-2/

More about Stages and proposals here:
https://tc39.github.io/process-document/

--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./src/app.js"
+  },
+  "dependencies": {
+    "babel-preset-env": "^1.1.4",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-register": "^6.18.0"
   }
 }
