--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "babel-preset-env": "^1.1.4",
     "babel-preset-stage-2": "^6.18.0",
-    "babel-register": "^6.18.0"
+    "babel-register": "^6.18.0",
+    "express": "^4.14.0"
   },
   "devDependencies": {
     "eslint": "^3.12.2",
