--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Alexander Zaharakis <alex.zaharakis@rea-group.com>",
   "license": "MIT",
   "scripts": {
+    "build": "webpack --config=./config/webpack.config.js",
     "start": "node ./src/app.js",
     "lint": "eslint ./src"
   },
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "eslint": "^3.12.2",
-    "eslint-plugin-react": "^6.8.0"
+    "eslint-plugin-react": "^6.8.0",
+    "webpack": "^1.14.0"
   }
 }
