--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --config=./config/webpack.config.js",
-    "start": "node ./src/app.js",
+    "start": "npm run build && node ./src/app.js",
     "lint": "eslint ./src"
   },
   "dependencies": {
