--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.14.0"
   },
   "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
     "webpack": "^1.14.0"
