--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "dependencies": {
     "babel-preset-env": "^1.1.4",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.18.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
