--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "scripts": {
     "build": "webpack --config=./config/webpack.config.js",
     "start": "npm run build && node ./src/app.js",
+    "watch": "webpack --watch --config=./config/webpack.config.js",
+    "dev": "concurrently 'npm run watch' 'forever --watch ./src/app.js'",
     "lint": "eslint ./src"
   },
   "dependencies": {
@@ -19,6 +21,8 @@
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "concurrently": "^3.1.0",
+    "forever": "^0.15.3",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
     "webpack": "^1.14.0"
