Add linting to the project with http://eslint.org/
generated using `./node_modules/.bin/eslint --init` using the
following settings:
? Which file(s), path(s), or glob(s) should be examined? ./src
? What format do you want your config file to be in? JavaScript
? Are you using ECMAScript 6 features? Yes
? Are you using ES6 modules? Yes
? Where will your code run? Browser, Node
? Do you use CommonJS? Yes
? Do you use JSX? Yes
? Do you use React? Yes

And then modified slightly to some particular preferences

--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "author": "Alexander Zaharakis <alex.zaharakis@rea-group.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node ./src/app.js"
+    "start": "node ./src/app.js",
+    "lint": "eslint ./src"
   },
   "dependencies": {
     "babel-preset-env": "^1.1.4",
     "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.18.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.12.2",
+    "eslint-plugin-react": "^6.8.0"
   }
 }
