--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "concurrently": "^3.1.0",
-    "forever": "^0.15.3",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
+    "forever": "^0.15.3",
+    "json-loader": "^0.5.4",
     "webpack": "^1.14.0"
   }
 }
