--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "concurrently": "^3.1.0",
+    "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
     "forever": "^0.15.3",
     "json-loader": "^0.5.4",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
   }
 }
