--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "forever": "^0.15.3",
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
