--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "npm run build && node ./src/app.js",
     "watch": "webpack --watch --config=./config/webpack.config.js",
     "dev": "concurrently 'npm run watch' 'forever --watch ./src/app.js'",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
+    "test": "npm run lint && npm run flow"
   },
   "dependencies": {
     "babel-preset-env": "^1.1.4",
@@ -23,12 +25,15 @@
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "concurrently": "^3.1.0",
     "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
+    "eslint-plugin-flowtype": "^2.29.2",
     "eslint-plugin-react": "^6.8.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "flow-bin": "^0.37.4",
     "forever": "^0.15.3",
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
