--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.18.0",
+    "es6-promise": "^4.0.5",
     "express": "^4.14.0",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
