--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "express": "^4.14.0",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
