Add Testing frameworks and tests to the App Container
- jest: a framework for running, and writing tests. In this case it
is allowing us to setup the Container.test file, it allows us to
write our tests using `describe` and `it` functions and it executes
and provides a report on the status of the tests.
- babel-jest: Can be seen as the equivalent of a loader for webpack
but is used in the conext of jest. When the jest command is run it
will use this plugin to compile the javascript code using the
settings defined in the .babelrc file.
- enzyme: Gives us handy features when it comes to working with react
components. In this case we are mounting our components using enzyme
in our test environment and accessing their values using methods
that enzyme exposes.
- react-addons-test-utils Is used under the hood by enzyme and is a
library that react provides. We don't need to use it directly.

We also added the tests to the test task and created a watch task
which will further enable TDD.

The jest entry in the package.json performs a simialr tole to what a
webpack file would do. In this case when any of the extensions within
the moduleNameMapper are found in the tests, they will be stubbed with
empty files. We won't be performing any unit tests on css or media items
such as images.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dev": "concurrently 'npm run watch' 'forever --watch ./src/app.js'",
     "lint": "eslint ./src",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
-    "test": "npm run lint && npm run flow"
+    "unit": "jest test",
+    "unit-watch": "jest test --watch",
+    "test": "npm run lint && npm run flow && npm run unit"
   },
   "dependencies": {
     "babel-preset-env": "^1.1.4",
@@ -31,17 +33,27 @@
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.10",
     "concurrently": "^3.1.0",
     "css-loader": "^0.26.1",
+    "enzyme": "^2.7.0",
     "eslint": "^3.12.2",
     "eslint-plugin-flowtype": "^2.29.2",
     "eslint-plugin-react": "^6.8.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "flow-bin": "^0.37.4",
     "forever": "^0.15.3",
+    "jest": "^18.1.0",
     "json-loader": "^0.5.4",
+    "react-addons-test-utils": "^15.4.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
